# gRollLang

./: .gitignore  Cargo.toml  README.md  makefile  notes.txt
.cargo/: config
data/: gRollLang.desktop  layout.glade  prompt.glade  quaternion.site.gRollLang-dev.json  quaternion.site.gRollLang.app-data.xml  quaternion.site.gRollLang.json
src/: main.rs  main_window.rs  roll.rs  state.rs
